<resources>
    <string name="app_name">Baby Investor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Re-enter Password</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_stock_detail">StockDetailActivity</string>
    <string name="tab_text_1">Graph</string>
    <string name="tab_text_2">Summary</string>
    <string name="action_register">Not signed up? Register</string>
    <string name="action_submit">Submit</string>

</resources>